force-app/main/default/objects/Device_MiddleCategory__c/Device_MiddleCategory__c.object-meta.xml
<CustomObject>
    <label>種別</label>
    <nameField>
        <label>種別名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>