force-app/main/default/objects/Device_MiddleCategory__c/fields/Device_LargeCategory__c.field-meta.xml
<CustomField>
    <fullName>Device_LargeCategory__c</fullName>
    <label>工種</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>対象の見積に属さない工種を選択しています。
選択し直してください。</errorMessage>
        <filterItems>
            <field>$Source.Quote__c</field>
            <operation>equals</operation>
            <valueField>Device_LargeCategory__c.Quote__r.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Device_LargeCategory__c</referenceTo>
    <relationshipLabel>種別</relationshipLabel>
    <relationshipName>Device_MiddleCategorys</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>