force-app/main/default/objects/Device_MiddleCategory__c/fields/Device_MiddleCategoryNo__c.field-meta.xml
<CustomField>
    <fullName>Device_MiddleCategoryNo__c</fullName>
    <label>種別No</label>
    <length>10</length>
    <type>Text</type>
</CustomField>